<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="2">

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/edit_text_style">

        <TextView
            android:id="@+id/tvDateBooked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetime_placeholder"
            android:gravity="center"
            android:textSize="16sp"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold"
            android:layout_column="1"
            android:layout_span="2"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/student_id"
            android:layout_column="1"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:id="@+id/tvStudentIdBooked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#########"
            android:layout_column="2"
            android:background="@drawable/edit_text_style"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">
        <TextView
            android:id="@+id/textView5"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/student_amount"
            android:layout_column="1"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:id="@+id/tvStudentAmtBooked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="#"
            android:layout_column="2"
            android:background="@drawable/edit_text_style"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="8dp"
            android:text="@string/booking_location"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:id="@+id/tvLocationBooked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="##"
            android:layout_column="2"
            android:background="@drawable/edit_text_style"/>
    </TableRow>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp">

        <TextView
            android:id="@+id/textView6"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_column="1"
            android:layout_marginEnd="8dp"
            android:text="@string/booking_time"
            android:background="@drawable/edit_text_style"/>

        <TextView
            android:id="@+id/tvTimeBooked"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="##"
            android:layout_column="2"
            android:background="@drawable/edit_text_style"/>
    </TableRow>

</TableLayout>